--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,11 +9,11 @@
       </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
+      <!--<ul class="nav navbar-nav">
         <li>
           <a href="#">About</a>
         </li>
-      </ul>
+      </ul>-->
     </div>
   </div>
 </div>
